Fixed wring link to body

--- a/presentations/react-change-detection/index.html
+++ b/presentations/react-change-detection/index.html
@@ -55,7 +55,7 @@
             </section>
 
 
-            <include src="./4/body.html"></include>
+            <include src="./react-change-detection/body.html"></include>
 
 
             <section>
