--- a/presentations/react-components/index.html
+++ b/presentations/react-components/index.html
@@ -55,7 +55,7 @@
             </section>
 
 
-            <include src="./2/body.html"></include>
+            <include src="./react-components/body.html"></include>
 
 
             <section>
