--- a/presentations/react-cra/index.html
+++ b/presentations/react-cra/index.html
@@ -62,7 +62,7 @@
                 </ul>
             </section>
 
-            <include src="./1/body.html"></include>
+            <include src="./react-cra/body.html"></include>
 
             <section>
                 <h2>Home task</h2>
