--- a/presentations/react-intro/index.html
+++ b/presentations/react-intro/index.html
@@ -55,7 +55,7 @@
             </section>
 
 
-            <include src="./0/body.html"></include>
+            <include src="./react-intro/body.html"></include>
 
 
             <section>
