--- a/presentations/react-new-component/index.html
+++ b/presentations/react-new-component/index.html
@@ -61,7 +61,7 @@
                 </ul>
             </section>
 
-            <include src="./3/body.html"></include>
+            <include src="./react-new-component/body.html"></include>
 
             <section>
                 <h2>Home task</h2>
