--- a/presentations/react-state-management/index.html
+++ b/presentations/react-state-management/index.html
@@ -62,7 +62,7 @@
                 </ul>
             </section>
 
-            <include src="./5/body.html"></include>
+            <include src="./react-state-management/body.html"></include>
 
             <section>
                 <h2>Home task</h2>
