--- a/presentations/react-styling/index.html
+++ b/presentations/react-styling/index.html
@@ -55,7 +55,7 @@
             </section>
 
 
-            <include src="./6/body.html"></include>
+            <include src="./react-styling/body.html"></include>
 
 
             <section>
