Added new presentation for the react routing Fixed wrong links

--- a/presentations/react-router/index.html
+++ b/presentations/react-router/index.html
@@ -72,8 +72,7 @@
             <section>
                 <h2>Useful links</h2>
                 <ul>
-                    <li> <a target="_blank" rel="noreferrer noopener" href=""></a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href=""></a> </li>
+                    <li> <a target="_blank" rel="noreferrer noopener" href="https://reactrouter.com/docs/en/v6/getting-started/overview">React Router</a> </li>
                 </ul>
             </section>
         </div>
