--- a/presentations/react-router/body.html
+++ b/presentations/react-router/body.html
@@ -9,8 +9,17 @@
     <section>
         <h4>Router - key mechanism for SPA</h4>
     </section>
-</section>
 
+    <section>
+        <h4>SPA</h4>
+        <p class="left">
+            A single-page application (SPA) is a web application or website that interacts with the user by dynamically
+            rewriting the current web page with new data from the web server, instead of the default method of a web
+            browser loading entire new pages. The goal is faster transitions that make the website feel more like a
+            native app - <a href="https://en.wikipedia.org/wiki/Single-page_application" target="_blank">wikipedia</a>
+        </p>
+    </section>
+</section>
 
 <section>
     <section>
@@ -29,7 +38,7 @@
         <h2>Basic setup</h2>
     </section>
 
-    <section>
+    <section data-visibility="hidden">
         <h4>Features</h4>
 
         <ul>
@@ -42,25 +51,67 @@
 
     <section>
         <h4>Add BrowserRouter</h4>
+
+        <pre><code data-line-numbers>&lt;BrowserRouter&gt;&lt;/BrowserRouter&gt;;</code></pre>
+
+        <p class="fragment fade-up left"> <i>BrowserRouter</i> might be configured for serving from sub root</p>
     </section>
+
 
     <section>
         <h4>Add Routes </h4>
-        <p>A container for a nested tree of elements that renders the branch that best matches the current location</p>
+
+        <pre><code data-line-numbers>&lt;BrowserRouter&gt;
+    &lt;Routes&gt;
+    &lt;/Routes&gt;
+&lt;/BrowserRouter&gt;;          </code></pre>
+
+        <p class="left fragment fade-up"><i>Routes</i> container for a nested tree of elements that renders the branch
+            that best matches the current location. React router supports multiple routes</p>
     </section>
 
     <section>
         <h4>
             Add list of routes
         </h4>
+
+        <pre><code data-line-numbers>&lt;BrowserRouter&gt;
+    &lt;Routes&gt;
+        &lt;Route path="/" element={&lt;IndexPage /&gt;} /&gt;
+        &lt;Route path="/user" element={&lt;UserPage /&gt;} /&gt;
+    &lt;/Routes&gt;
+&lt;/BrowserRouter&gt;;</code></pre>
+
+        <p class="left fade-up fragment">When user will open default page - the Index page will be shown, when he will
+            open <i>/user</i>, the UserPage will be shown
+        </p>
     </section>
 
     <section>
         <h4>Declarative navigation</h4>
+
+        <pre><code data-line-numbers>&lt;Link to="/user"&gt;Go to user page&lt;/Link&gt;</code></pre>
     </section>
 
     <section>
         <h4>Programmatic navigation</h4>
+        <pre class="language-tsx"><code data-line-numbers>const Forbidden = () =&gt; {
+    const navigate = useNavigate();
+
+    useEffect(() =&gt; {
+        navigate("/");
+    }, []);
+
+    return &lt;&gt;FORBIDDEN&lt;/&gt;;
+};</code></pre>
+        <p class="fragment fade-up left">Use <i>useNavigate</i> hook for programmatic navigation</p>
+    </section>
+
+
+    <section>
+        <h4>OR a bit easier</h4>
+        <pre
+            class="language-tsx"><code data-line-numbers>const Forbidden = () =&gt; &lt;Navigate to="/" /&gt;</code></pre>
     </section>
 </section>
 
@@ -68,10 +119,185 @@
     <section>
         <h2>Data Binding</h2>
     </section>
+
+    <section>
+        <h4>Data binding allows storing data which defines the page in the transferable manner, within the link</h4>
+    </section>
+
+    <section>
+        <h4>Real life example</h4>
+
+        <p>
+            https://twitter.com/<span class="fragment highlight-green">drag137</span>
+        </p>
+    </section>
+
+    <section>
+        <h4>Define</h4>
+        <pre><code data-line-numbers>&lt;Route path="/:userName" element={&lt;UserPage /&gt;} /&gt;</code></pre>
+    </section>
+    <section>
+        <h4>Use</h4>
+        <pre><code data-line-numbers>const UserPage = () =&gt; {
+    const { userName } = useParams();
+    return &lt;div&gt;Hello user: {userName}&lt;/div&gt;;
+};</code></pre>
+    </section>
+
+    <section>
+        <p class="left">We also can use userName or other similar parameter to fetch the data from backend </p>
+    </section>
+
+    <section>
+        <h4>❗❗❗Important❗❗❗</h4>
+
+        <p>
+            Getting params inside the class-based component is not possible in react-router >=6
+        </p>
+    </section>
+
+
 </section>
 
 <section>
     <section>
         <h2>Router guard</h2>
+    </section>
+
+    <section>
+        <h4>Example</h4>
+
+        <p class="left">Imagine that you created a personal cabinet for the user. User have to login before visiting
+            personal cabinet.
+        </p>
+
+        <p class="left fade-up fragment">
+            However, user might try to visit the cabinet without the authentication, using the direct link.
+        </p>
+
+        <p class="left fade-up fragment">
+            Thus, you need to <span class="fragment highlight-green">guard</span> it
+        </p>
+    </section>
+
+    <section>
+        <h4>Create the guard</h4>
+
+        <pre><code data-line-numbers>type UserData = { user?: { authenticated: boolean } };
+
+const UserPageGuard: FC&lt;UserData&gt; = ({ user }) =&gt;
+    user && user.authenticated ? 
+    &lt;UserPage /&gt; : 
+    &lt;Navigate to="/login" /&gt;;</code></pre>
+    </section>
+
+    <section>
+
+        <h4>Update routes</h4>
+        <pre><code data-line-numbers>&lt;Routes&gt;
+    &lt;Route path="/login" element={"Please login"} /&gt;
+    &lt;Route
+        path="/:userName"
+        element={&lt;UserPageGuard user={userData} /&gt;}
+    /&gt;
+&lt;/Routes&gt; </code></pre>
+    </section>
+
+
+    <section>
+        <h4>Try to use</h4>
+        <p class="left">Now, if user is not authenticated, or no data is present, he will be automatically navigate to
+            the login page
+        </p>
+    </section>
+
+</section>
+
+<section>
+    <section>
+        <h2>Nested routing</h2>
+    </section>
+
+    <section>
+        <h4>Why?</h4>
+
+        <p class="left">Imagine you created personal page for user: <i class="fragment highlight-green">/user</i></p>
+
+        <p class="left fragment fade-up">Now you want to have two options of the view - default and posts but with the
+            <i class="fragment highlight-green">
+                same layout
+            </i>
+        </p>
+
+        <p class="left fragment fade-up">
+            Then you might build your routing this way:
+            default view withing <span class="fragment highlight-green"> /:user </span> and posts view within
+            <span class="fragment highlight-green"> /:user/posts </span>
+        </p>
+    </section>
+
+    <section>
+        <h4>Add an outlet to the UserPage</h4>
+
+        <pre><code data-line-numbers="1-11|7">const UserPage = () =&gt; {
+    const { userName } = useParams();
+    return (
+        &lt;&gt;
+            Hello user: {userName}
+            &lt;div&gt;
+                View: &lt;Outlet&gt;&lt;/Outlet&gt;
+            &lt;/div&gt;
+        &lt;/&gt;
+    );
+};</code></pre>
+    </section>
+
+    <section>
+        <h4>Outlet</h4>
+
+        <p>Outlet - the "portal" where your sub-route will be rendered</p>
+    </section>
+
+    <section>
+        <h4>Add Links to the default and post view</h4>
+
+        <pre><code data-line-numbers="1-6|2|5">&lt;div&gt;
+    &lt;Link to=""&gt;Default view&lt;/Link&gt;
+&lt;/div&gt;
+&lt;div&gt;
+    &lt;Link to="posts"&gt;Posts view&lt;/Link&gt;
+&lt;/div&gt;</code></pre>
+    </section>
+
+    <section>
+        <h4>Update routing</h4>
+
+        <pre><code data-line-numbers="1-4|1|2|3">&lt;Route path="/:userName" element={&lt;UserPage/&gt;}&gt;
+    &lt;Route index element={"Default View"} /&gt;
+    &lt;Route path="posts" element={"Showing all posts"} /&gt;
+&lt;/Route&gt;</code></pre>
+    </section>
+
+    <section>
+        <h4>http://localhost:3000/drag13</h4>
+
+        <pre>
+            Hello user: drag13
+            View: Default View
+        </pre>
+    </section>
+
+    
+    <section>
+        <h4>http://localhost:3000/drag13/posts</h4>
+
+        <pre>
+            Hello user: drag13
+            View: Showing all posts
+        </pre>
+    </section>
+
+    <section>
+        <h4>Full example is <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-router/code/react-routing.tsx">here</a></h4>
     </section>
 </section>
