--- a/presentations/react-new-component/index.html
+++ b/presentations/react-new-component/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React For Beginners - Building your own component</title>
-    <meta name="description" content="Free learning course - React: Building your own component">
+    <title>React For Beginners - Building React Component</title>
+    <meta name="description" content="Free learning course - React: Building React Component">
     </meta>
     <meta name="keywords" content="react free learning course beginners">
     </meta>
     <meta name="twitter:card" content="summary">
     </meta>
-    <meta name="twitter:title" content="React For Beginners - Building your own component">
+    <meta name="twitter:title" content="React For Beginners - Building React Component">
     </meta>
     <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
     </meta>
@@ -22,7 +22,7 @@
     </meta>
     <meta property="og:image" content="../shared/imgs/title.png">
     </meta>
-    <meta property="og:title" content="React For Beginners - Building your own component">
+    <meta property="og:title" content="React For Beginners - Building React Component">
     <meta name="author" content="drag13">
     </meta>
     <meta name="robots" content="index follow">
@@ -45,7 +45,7 @@
 
             <section>
                 <h1>
-                    L3 - Building your own component
+                    L3 - Building React Component
                 </h1>
                 <h4>
                     <u>
