--- a/presentations/react-router/index.html
+++ b/presentations/react-router/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React For Beginners - React Router</title>
-    <meta name="description" content="Free learning course - React: React Router">
+    <title>React For Beginners - Routing in React</title>
+    <meta name="description" content="Free learning course - React: Routing in React">
     </meta>
     <meta name="keywords" content="react free learning course beginners">
     </meta>
     <meta name="twitter:card" content="summary">
     </meta>
-    <meta name="twitter:title" content="React For Beginners - React Router">
+    <meta name="twitter:title" content="React For Beginners - Routing in React">
     </meta>
     <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
     </meta>
@@ -22,7 +22,7 @@
     </meta>
     <meta property="og:image" content="../shared/imgs/title.png">
     </meta>
-    <meta property="og:title" content="React For Beginners - React Router">
+    <meta property="og:title" content="React For Beginners - Routing in React">
     <meta name="author" content="drag13">
     </meta>
     <meta name="robots" content="index follow">
@@ -45,7 +45,7 @@
 
             <section>
                 <h1>
-                    L9 - React Router
+                    L9 - Routing in React
                 </h1>
                 <h4>
                     <u>
