--- a/presentations/react-forms/index.html
+++ b/presentations/react-forms/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React For Beginners - Forms with React, Formik and Yup</title>
-    <meta name="description" content="Free learning course - React: Forms with React, Formik and Yup">
+    <title>React For Beginners - Dealing with Forms - Default way and React-Hook-Forms</title>
+    <meta name="description" content="Free learning course - React: Dealing with Forms - Default way and React-Hook-Forms">
     </meta>
     <meta name="keywords" content="react free learning course beginners">
     </meta>
     <meta name="twitter:card" content="summary">
     </meta>
-    <meta name="twitter:title" content="React For Beginners - Forms with React, Formik and Yup">
+    <meta name="twitter:title" content="React For Beginners - Dealing with Forms - Default way and React-Hook-Forms">
     </meta>
     <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
     </meta>
@@ -22,7 +22,7 @@
     </meta>
     <meta property="og:image" content="../shared/imgs/title.png">
     </meta>
-    <meta property="og:title" content="React For Beginners - Forms with React, Formik and Yup">
+    <meta property="og:title" content="React For Beginners - Dealing with Forms - Default way and React-Hook-Forms">
     <meta name="author" content="drag13">
     </meta>
     <meta name="robots" content="index follow">
@@ -45,7 +45,7 @@
 
             <section>
                 <h1>
-                    L7 - Forms with React, Formik and Yup
+                    L7 - Dealing with Forms - Default way and React-Hook-Forms
                 </h1>
                 <h4>
                     <u>
@@ -57,13 +57,20 @@
             <section>
                 <h2>Prerequisite</h2>
                 <ul>
-                    <li>Install [Formik](https://www.npmjs.com/package/formik) and [Yup](https://www.npmjs.com/package/yup) before the workshop</li>
+                    <li>Install <a href="https://react-hook-form.com/get-started">React Hook Form</a> before the workshop</li>
                 </ul>
             </section>
 
             <include src="./react-forms/body.html"></include>
 
 
+            <section>
+                <h2>Useful links</h2>
+                <ul>
+                    <li> <a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/forms.html">React forms - default way</a> </li>
+                    <li> <a target="_blank" rel="noreferrer noopener" href="https://react-hook-form.com/get-started">React Hook Form</a> </li>
+                </ul>
+            </section>
         </div>
     </div>
     <script src="../shared/init.js" type="module"></script>
