--- a/presentations/react-forms/index.html
+++ b/presentations/react-forms/index.html
@@ -69,6 +69,7 @@
                 <ul>
                     <li> <a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/forms.html">React forms - default way</a> </li>
                     <li> <a target="_blank" rel="noreferrer noopener" href="https://react-hook-form.com/get-started">React Hook Form</a> </li>
+                    <li> <a target="_blank" rel="noreferrer noopener" href="https://github.com/jquense/yup">Yup</a> </li>
                 </ul>
             </section>
         </div>
