--- a/presentations/react-forms/body.html
+++ b/presentations/react-forms/body.html
@@ -12,16 +12,16 @@
     <section>
         <h3>Create a component with empty form and state</h3>
         <pre><code data-line-numbers>class MyForm extends PureComponent {
-state = {email: ''}
+    state = { email: "" };
     render() {
         return (
-        &lt;form&gt;
-            &lt;h1&gt;My form&lt;/h1&gt;
-        &lt;/form&gt;
+            <form>
+                <h1>My form</h1>
+            </form>
         );
     }
 }
-          </code></pre>
+        </code></pre>
     </section>
 
     <section>
@@ -52,7 +52,9 @@ state = {email: ''}
     </section>
 
     <section>
-        <h3>Work is done, full example <a href="">here</a></h3>
+        <h3>Work is done, full example <a
+                href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-forms/code/default-form.tsx">here</a>
+        </h3>
     </section>
 
     <section>
@@ -178,7 +180,6 @@ state = {email: ''}
         <h2>Validation with <a href="https://github.com/jquense/yup">Yup</a> </h2>
     </section>
 
-
     <section>
         <h3>
             To make validations even easier, you can use Yup
@@ -192,8 +193,8 @@ state = {email: ''}
 
         <ul>
             <li>16_700 ⭐</li>
-            <li>2,861,507 downloads</li>
-            <li>60kB size</li>
+            <li class="fragment fade-up">2,861,507 downloads</li>
+            <li class="fragment fade-up">60kB size</li>
         </ul>
     </section>
     <section>
@@ -216,7 +217,9 @@ const { register, handleSubmit, formState } = useForm&lt;FormData&gt;({
     </section>
 
     <section>
-        <h3>You a good to <a href="">go</a></h3>
+        <h3>You a good to <a
+                href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-forms/code/yup.tsx">go</a>
+        </h3>
     </section>
 
     <section>
@@ -228,7 +231,8 @@ const { register, handleSubmit, formState } = useForm&lt;FormData&gt;({
 
         <ul>
             <li>Learning curve with TS</li>
-            <li>Size - 60kB for validation is pretty much, however version 1 should be around 40kB </li>
+            <li class="fragment fade-up">Size - 60kB for validation is pretty much, however version 1 should be around
+                40kB </li>
         </ul>
     </section>
 
@@ -236,8 +240,8 @@ const { register, handleSubmit, formState } = useForm&lt;FormData&gt;({
         <h3>When to use</h3>
 
         <ul>
-            <li>For a complex validations</li>
-            <li>When need to share the validation logic</li>
+            <li>For a complex models</li>
+            <li class="fragment fade-up">When need to share the validation logic</li>
         </ul>
     </section>
 </section>
