Added missing links

--- a/presentations/react-network/body.html
+++ b/presentations/react-network/body.html
@@ -66,7 +66,7 @@
     </section>
 
     <section>
-        <h3>Full <a href="">example</a></h3>
+        <h3>Full <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-cb.tsx">example</a></h3>
     </section>
 
     <section>
@@ -137,7 +137,7 @@ const useFreeApi = () =&gt; {
 
 
     <section>
-        <h3>Full <a href="">example</a></h3>
+        <h3>Full <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-functional.tsx">example</a></h3>
     </section>
 
     <section>
@@ -274,7 +274,7 @@ axios.interceptors.response.use((response) =&gt; {
     </section>
 
     <section>
-        <h3>Full <a href="">example</a></h3>
+        <h3>Full <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-axios.tsx">example</a></h3>
     </section>
 
 </section>
