--- a/presentations/react-intro/index.html
+++ b/presentations/react-intro/index.html
@@ -69,7 +69,14 @@
             </section>
         </div>
     </div>
+
     <script src="../shared/init.js" type="module"></script>
+
+    <footer class="footer">
+        <a href="https://itera.com">
+            <img src="../shared/imgs/Itera-logo-white-fuchsia.jpg" alt="https://itera.com">
+        </a>
+    </footer>
 </body>
 
 </html>
