--- a/presentations/react-intro/index.html
+++ b/presentations/react-intro/index.html
@@ -1,82 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React For Beginners - What is React</title>
-    <meta name="description" content="Free learning course - React: What is React">
-    </meta>
-    <meta name="keywords" content="react free learning course beginners">
-    </meta>
-    <meta name="twitter:card" content="summary">
-    </meta>
-    <meta name="twitter:title" content="React For Beginners - What is React">
-    </meta>
-    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
-    </meta>
-    <meta name="twitter:creator" content="@drag137">
-    </meta>
-    <meta name="twitter:image" content="../shared/imgs/title.png">
-    </meta>
-    <meta property="og:image" content="../shared/imgs/title.png">
-    </meta>
-    <meta property="og:title" content="React For Beginners - What is React">
-    <meta name="author" content="drag13">
-    </meta>
-    <meta name="robots" content="index follow">
-    </meta>
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
-    <link rel="stylesheet" href="../shared/helpers.css">
-</head>
+    <meta name="description" content="Free learning course - React: What is React" />
+    <meta name="keywords" content="react free learning course beginners" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="React For Beginners - What is React" />
+    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short/react-intro" />
+    <meta name="twitter:creator" content="@drag137" />
+    <meta name="twitter:image" content="../shared/imgs/title.png" />
+    <meta property="og:image" content="../shared/imgs/title.png" />
+    <meta property="og:title" content="React For Beginners - What is React" />
+    <meta name="og:site_name" content="React For Beginners - What is React">
+    <meta name="application-name" content="React For Beginners - What is React">
+    <meta name="author" content="drag13" />
+    <meta name="robots" content="index follow" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
+    <link rel="stylesheet" href="../shared/helpers.css" />
+  </head>
 
-<body>
+  <body>
     <div class="reveal">
-        <div class="slides">
+      <div class="slides">
+        <section>
+          <h1 class="ukraine">
+            Free React Course <br />
+            For Beginners
+          </h1>
+        </section>
 
-            <section>
-                <h1 class="ukraine">
-                    Free React Course <br /> For Beginners
-                </h1>
-            </section>
-
-            <section>
-                <h1>
-                    L0 - What is React
-                </h1>
-                <h4>
-                    <u>
-                        React For Beginners by Itera
-                    </u>
-                </h4>
-            </section>
+        <section>
+          <h1>L0 - What is React</h1>
+          <h4>
+            <u> React For Beginners by Itera </u>
+          </h4>
+        </section>
 
 
-            <include src="./react-intro/body.html"></include>
+        <include src="./react-intro/body.html"></include>
 
-
-            <section>
-                <h2>Useful links</h2>
-                <ul>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/getting-started.html">Documentation</a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://github.com/facebook/react">React - source code</a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://github.com/facebook/react/blob/main/CHANGELOG.md">React changelog</a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://blog.devgenius.io/react-costs-companies-a-lot-of-money-6bfa3e5cc6f4">Why React is a bad idea</a> </li>
-                </ul>
-            </section>
-        </div>
+        <section>
+          <h2>Useful links</h2>
+          <ul>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/getting-started.html">Documentation</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/facebook/react">React - source code</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/facebook/react/blob/main/CHANGELOG.md">React changelog</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://blog.devgenius.io/react-costs-companies-a-lot-of-money-6bfa3e5cc6f4">Why React is a bad idea</a></li>
+          </ul>
+        </section>
+      </div>
     </div>
 
     <script src="../shared/init.js" type="module"></script>
 
     <footer class="footer">
-        <a href="https://itera.com">
-            <img src="../shared/imgs/Itera-logo-white-fuchsia.jpg" alt="https://itera.com">
-        </a>
+      <a href="https://itera.com">
+        <img src="../shared/imgs/Itera-logo-white-fuchsia.jpg" alt="https://itera.com" />
+      </a>
     </footer>
-</body>
-
+  </body>
 </html>
