Massive layout updates for the created presentations

--- a/presentations/react-intro/index.html
+++ b/presentations/react-intro/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React For Beginners - What is React</title>
@@ -9,13 +10,18 @@
     <meta name="keywords" content="react free learning course beginners" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="React For Beginners - What is React" />
-    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short/react-intro" />
+    <meta
+      name="twitter:site"
+      content="https://github.com/Drag13/react-learning-course-short/react-intro"
+    />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
     <meta property="og:title" content="React For Beginners - What is React" />
-    <meta name="og:site_name" content="React For Beginners - What is React">
-    <meta name="application-name" content="React For Beginners - What is React">
+    <meta name="og:site_name" content="React For Beginners - What is React" />
+    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:type" content="website" />
+    <meta name="application-name" content="React For Beginners - What is React" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
