--- a/presentations/react-new-component/index.html
+++ b/presentations/react-new-component/index.html
@@ -1,95 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React For Beginners - Building React Component</title>
-    <meta name="description" content="Free learning course - React: Building React Component">
-    </meta>
-    <meta name="keywords" content="react free learning course beginners">
-    </meta>
-    <meta name="twitter:card" content="summary">
-    </meta>
-    <meta name="twitter:title" content="React For Beginners - Building React Component">
-    </meta>
-    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
-    </meta>
-    <meta name="twitter:creator" content="@drag137">
-    </meta>
-    <meta name="twitter:image" content="../shared/imgs/title.png">
-    </meta>
-    <meta property="og:image" content="../shared/imgs/title.png">
-    </meta>
-    <meta property="og:title" content="React For Beginners - Building React Component">
-    <meta name="author" content="drag13">
-    </meta>
-    <meta name="robots" content="index follow">
-    </meta>
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
-    <link rel="stylesheet" href="../shared/helpers.css">
-</head>
+    <meta name="description" content="Free learning course - React: Building React Component" />
+    <meta name="keywords" content="react free learning course beginners" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="React For Beginners - Building React Component" />
+    <meta
+      name="twitter:site"
+      content="https://github.com/Drag13/react-learning-course-short/react-new-component"
+    />
+    <meta name="twitter:creator" content="@drag137" />
+    <meta name="twitter:image" content="../shared/imgs/title.png" />
+    <meta property="og:image" content="../shared/imgs/title.png" />
+    <meta property="og:title" content="React For Beginners - Building React Component" />
+    <meta name="og:site_name" content="React For Beginners - Building React Component" />
+    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:type" content="website" />
+    <meta name="application-name" content="React For Beginners - Building React Component" />
+    <meta name="author" content="drag13" />
+    <meta name="robots" content="index follow" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
+    <link rel="stylesheet" href="../shared/helpers.css" />
+  </head>
 
-<body>
+  <body>
     <div class="reveal">
-        <div class="slides">
+      <div class="slides">
+        <section>
+          <h1 class="ukraine">
+            Free React Course <br />
+            For Beginners
+          </h1>
+        </section>
 
-            <section>
-                <h1 class="ukraine">
-                    Free React Course <br /> For Beginners
-                </h1>
-            </section>
+        <section>
+          <h1>L3 - Building React Component</h1>
+          <h4>
+            <u> React For Beginners by Itera </u>
+          </h4>
+        </section>
 
-            <section>
-                <h1>
-                    L3 - Building React Component
-                </h1>
-                <h4>
-                    <u>
-                        React For Beginners by Itera
-                    </u>
-                </h4>
-            </section>
+        <section>
+          <h2>Prerequisite</h2>
+          <ul>
+            <li>Create new project using <a href="https://drag13.io/react-learning-course-short/1/index.html">example</a></li>
+          </ul>
+        </section>
 
-            <section>
-                <h2>Prerequisite</h2>
-                <ul>
-                    <li>Create new project using <a href="https://drag13.io/react-learning-course-short/1/index.html">example</a></li>
-                </ul>
-            </section>
+        <include src="./react-new-component/body.html"></include>
 
-            <include src="./react-new-component/body.html"></include>
-
-            <section>
-                <h2>Home task</h2>
-                <ul>
-                    <li>Add footer to your application</li>
-                    <li>Split the application you've built previously into components</li>
-                    <li>Create a component named `<AppLink>` which will render `a`. Component should:</li>
-                    <li>Be typed</li>
-                    <li>Accept custom text</li>
-                    <li>Accept custom url</li>
-                    <li>Accept callback that should be invoked before the click</li>
-                    <li>Put the new component into the footer</li>
-                    <li>When clicked, it should log into the console next text: `redirecting user to the next {link}` where `{link}` should be a's href</li>
-                </ul>
-            </section>
-
-            <section>
-                <h2>Useful links</h2>
-                <ul>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-class.tsx">Class-based MessageBlock example</a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-functional.tsx">Functional MessageBlock example</a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-functional.tsx">Functional Counter example</a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-cb.tsx">Class-based Counter example</a> </li>
-                </ul>
-            </section>
-        </div>
+        <section>
+          <h2>Home task</h2>
+          <ul>
+            <li>Add footer to your application</li>
+            <li>Split the application you've built previously into components</li>
+            <li>Create a component named `<AppLink>` which will render `a`. Component should:</li>
+            <li>Be typed</li>
+            <li>Accept custom text</li>
+            <li>Accept custom url</li>
+            <li>Accept callback that should be invoked before the click</li>
+            <li>Put the new component into the footer</li>
+            <li>When clicked, it should log into the console next text: `redirecting user to the next {link}` where `{link}` should be a's href</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Useful links</h2>
+          <ul>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-class.tsx">Class-based MessageBlock example</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-functional.tsx">Functional MessageBlock example</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-functional.tsx">Functional Counter example</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-cb.tsx">Class-based Counter example</a></li>
+          </ul>
+        </section>
+      </div>
     </div>
-    <script src="../shared/init.js" type="module"></script>
-</body>
 
+    <script src="../shared/init.js" type="module"></script>
+
+    <footer class="footer">
+      <a href="https://itera.com">
+        <img src="../shared/imgs/Itera-logo-white-fuchsia.jpg" alt="https://itera.com" />
+      </a>
+    </footer>
+  </body>
 </html>
