--- a/presentations/react-router/index.html
+++ b/presentations/react-router/index.html
@@ -1,83 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React For Beginners - Routing in React</title>
-    <meta name="description" content="Free learning course - React: Routing in React">
-    </meta>
-    <meta name="keywords" content="react free learning course beginners">
-    </meta>
-    <meta name="twitter:card" content="summary">
-    </meta>
-    <meta name="twitter:title" content="React For Beginners - Routing in React">
-    </meta>
-    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
-    </meta>
-    <meta name="twitter:creator" content="@drag137">
-    </meta>
-    <meta name="twitter:image" content="../shared/imgs/title.png">
-    </meta>
-    <meta property="og:image" content="../shared/imgs/title.png">
-    </meta>
-    <meta property="og:title" content="React For Beginners - Routing in React">
-    <meta name="author" content="drag13">
-    </meta>
-    <meta name="robots" content="index follow">
-    </meta>
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
-    <link rel="stylesheet" href="../shared/helpers.css">
-</head>
+    <meta name="description" content="Free learning course - React: Routing in React" />
+    <meta name="keywords" content="react free learning course beginners" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="React For Beginners - Routing in React" />
+    <meta
+      name="twitter:site"
+      content="https://github.com/Drag13/react-learning-course-short/react-router"
+    />
+    <meta name="twitter:creator" content="@drag137" />
+    <meta name="twitter:image" content="../shared/imgs/title.png" />
+    <meta property="og:image" content="../shared/imgs/title.png" />
+    <meta property="og:title" content="React For Beginners - Routing in React" />
+    <meta name="og:site_name" content="React For Beginners - Routing in React" />
+    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:type" content="website" />
+    <meta name="application-name" content="React For Beginners - Routing in React" />
+    <meta name="author" content="drag13" />
+    <meta name="robots" content="index follow" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
+    <link rel="stylesheet" href="../shared/helpers.css" />
+  </head>
 
-<body>
+  <body>
     <div class="reveal">
-        <div class="slides">
+      <div class="slides">
+        <section>
+          <h1 class="ukraine">
+            Free React Course <br />
+            For Beginners
+          </h1>
+        </section>
 
-            <section>
-                <h1 class="ukraine">
-                    Free React Course <br /> For Beginners
-                </h1>
-            </section>
-
-            <section>
-                <h1>
-                    L9 - Routing in React
-                </h1>
-                <h4>
-                    <u>
-                        React For Beginners by Itera
-                    </u>
-                </h4>
-            </section>
+        <section>
+          <h1>L9 - Routing in React</h1>
+          <h4>
+            <u> React For Beginners by Itera </u>
+          </h4>
+        </section>
 
 
-            <include src="./react-router/body.html"></include>
+        <include src="./react-router/body.html"></include>
 
-            <section>
-                <h2>Home task</h2>
-                <ul>
-                    <li>Add header for your application</li>
-                    <li>Create new page named `about`</li>
-                    <li>Move all content related yourself to the page about</li>
-                    <li>Add new query parameter named `ln` to your link like this: `https://8080?ln=ua`</li>
-                    <li>If `ln` equals `ua` all texts should be in Ukrainian language</li>
-                    <li>If `ln` equals `en` all text should be in English (feel free to use google translate if needed)</li>
-                </ul>
-            </section>
-
-            <section>
-                <h2>Useful links</h2>
-                <ul>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://reactrouter.com/docs/en/v6/getting-started/overview">React Router</a> </li>
-                </ul>
-            </section>
-        </div>
+        <section>
+          <h2>Home task</h2>
+          <ul>
+            <li>Add header for your application</li>
+            <li>Create new page named `about`</li>
+            <li>Move all content related yourself to the page about</li>
+            <li>Add new query parameter named `ln` to your link like this: `https://8080?ln=ua`</li>
+            <li>If `ln` equals `ua` all texts should be in Ukrainian language</li>
+            <li>If `ln` equals `en` all text should be in English (feel free to use google translate if needed)</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Useful links</h2>
+          <ul>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://reactrouter.com/docs/en/v6/getting-started/overview">React Router</a></li>
+          </ul>
+        </section>
+      </div>
     </div>
-    <script src="../shared/init.js" type="module"></script>
-</body>
 
+    <script src="../shared/init.js" type="module"></script>
+
+    <footer class="footer">
+      <a href="https://itera.com">
+        <img src="../shared/imgs/Itera-logo-white-fuchsia.jpg" alt="https://itera.com" />
+      </a>
+    </footer>
+  </body>
 </html>
