--- a/presentations/react-state-management/index.html
+++ b/presentations/react-state-management/index.html
@@ -1,98 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React For Beginners - Managing state in React</title>
-    <meta name="description" content="Free learning course - React: Managing state in React">
-    </meta>
-    <meta name="keywords" content="react free learning course beginners">
-    </meta>
-    <meta name="twitter:card" content="summary">
-    </meta>
-    <meta name="twitter:title" content="React For Beginners - Managing state in React">
-    </meta>
-    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
-    </meta>
-    <meta name="twitter:creator" content="@drag137">
-    </meta>
-    <meta name="twitter:image" content="../shared/imgs/title.png">
-    </meta>
-    <meta property="og:image" content="../shared/imgs/title.png">
-    </meta>
-    <meta property="og:title" content="React For Beginners - Managing state in React">
-    <meta name="author" content="drag13">
-    </meta>
-    <meta name="robots" content="index follow">
-    </meta>
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
-    <link rel="stylesheet" href="../shared/helpers.css">
-</head>
+    <meta name="description" content="Free learning course - React: Managing state in React" />
+    <meta name="keywords" content="react free learning course beginners" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="React For Beginners - Managing state in React" />
+    <meta
+      name="twitter:site"
+      content="https://github.com/Drag13/react-learning-course-short/react-state-management"
+    />
+    <meta name="twitter:creator" content="@drag137" />
+    <meta name="twitter:image" content="../shared/imgs/title.png" />
+    <meta property="og:image" content="../shared/imgs/title.png" />
+    <meta property="og:title" content="React For Beginners - Managing state in React" />
+    <meta name="og:site_name" content="React For Beginners - Managing state in React" />
+    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:type" content="website" />
+    <meta name="application-name" content="React For Beginners - Managing state in React" />
+    <meta name="author" content="drag13" />
+    <meta name="robots" content="index follow" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
+    <link rel="stylesheet" href="../shared/helpers.css" />
+  </head>
 
-<body>
+  <body>
     <div class="reveal">
-        <div class="slides">
+      <div class="slides">
+        <section>
+          <h1 class="ukraine">
+            Free React Course <br />
+            For Beginners
+          </h1>
+        </section>
 
-            <section>
-                <h1 class="ukraine">
-                    Free React Course <br /> For Beginners
-                </h1>
-            </section>
+        <section>
+          <h1>L6 - Managing state in React</h1>
+          <h4>
+            <u> React For Beginners by Itera </u>
+          </h4>
+        </section>
 
-            <section>
-                <h1>
-                    L6 - Managing state in React
-                </h1>
-                <h4>
-                    <u>
-                        React For Beginners by Itera
-                    </u>
-                </h4>
-            </section>
+        <section>
+          <h2>Prerequisite</h2>
+          <ul>
+            <li>Copy the <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-state-management/code/index_general.tsx">code</a> to your project</li>
+            <li>Install MobX - <i>npm i mobx mobx-react-lite</i></li>
+          </ul>
+        </section>
 
-            <section>
-                <h2>Prerequisite</h2>
-                <ul>
-                    <li>Copy the <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-state-management/code/index_general.tsx">code</a> to your project</li>
-                    <li>Install MobX - <i>npm i mobx mobx-react-lite</i></li>
-                </ul>
-            </section>
+        <include src="./react-state-management/body.html"></include>
 
-            <include src="./react-state-management/body.html"></include>
-
-            <section>
-                <h2>Home task</h2>
-                <ul>
-                    <li>Using context write the timer that will have two buttons</li>
-                    <li>start and stop</li>
-                    <li>Timer should:</li>
-                    <li>Be stopped by default</li>
-                    <li>On start, App should display time in format HH:MM:SS</li>
-                    <li>On start page title should be changed to "Timer is running"</li>
-                    <li>On stop timer should be stopped, the latest value should be present</li>
-                    <li>Page title should be returned back to normal</li>
-                    <li>Install MobX</li>
-                    <li>Implement same functionality with MobX</li>
-                </ul>
-            </section>
-
-            <section>
-                <h2>Useful links</h2>
-                <ul>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/context.html">Context</a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://redux.js.org/">Redux</a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://medium.com/@dan_abramov/you-might-not-need-redux-be46360cf367">You might not need Redux</a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://reduxtoolkit.js.org/">Redux Toolkit</a> </li>
-                    <li> <a target="_blank" rel="noreferrer noopener" href="https://mobx.js.org/react-integration.html">MobX</a> </li>
-                </ul>
-            </section>
-        </div>
+        <section>
+          <h2>Home task</h2>
+          <ul>
+            <li>Using context write the timer that will have two buttons</li>
+            <li>start and stop</li>
+            <li>Timer should:</li>
+            <li>Be stopped by default</li>
+            <li>On start, App should display time in format HH:MM:SS</li>
+            <li>On start page title should be changed to "Timer is running"</li>
+            <li>On stop timer should be stopped, the latest value should be present</li>
+            <li>Page title should be returned back to normal</li>
+            <li>Install MobX</li>
+            <li>Implement same functionality with MobX</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Useful links</h2>
+          <ul>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/context.html">Context</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://redux.js.org/">Redux</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://medium.com/@dan_abramov/you-might-not-need-redux-be46360cf367">You might not need Redux</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://reduxtoolkit.js.org/">Redux Toolkit</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://mobx.js.org/react-integration.html">MobX</a></li>
+          </ul>
+        </section>
+      </div>
     </div>
-    <script src="../shared/init.js" type="module"></script>
-</body>
 
+    <script src="../shared/init.js" type="module"></script>
+
+    <footer class="footer">
+      <a href="https://itera.com">
+        <img src="../shared/imgs/Itera-logo-white-fuchsia.jpg" alt="https://itera.com" />
+      </a>
+    </footer>
+  </body>
 </html>
